fix blockquotes on mobile

--- a/assets/css/_scaffolding.styl
+++ b/assets/css/_scaffolding.styl
@@ -87,6 +87,9 @@ blockquote
   font-size:1.6rem
   padding:0.5rem 2rem 1.5rem
   
+  +below(tablet)
+    margin:0
+  
   &:after
     content:" "
     background-image:url(/img/tear.svg)
